welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Math.abs(n - 100) < 10) {
        ^